--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel"
+    "start": "parcel",
+    "serve": "parcel --host 0.0.0.0"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "antd": "^5.24.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.4.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.14.2",
+    "@parcel/transformer-sass": "^2.14.4",
+    "@parcel/transformer-svg-react": "^2.14.4",
     "@types/react": "^19.0.12",
-    "parcel": "^2.14.2"
+    "parcel": "^2.14.4",
+    "svgo": "^3.3.2"
   }
 }
